--- a/index.html
+++ b/index.html
@@ -2,8 +2,65 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>Проект</title>
+    <title>Техномарт</title>
   </head>
   <body>
+    <header class="main-header">
+      <div class="main-header__middle-column">
+        <h1 class="main-header__page-title">Интернет-магазин строительных материалов и инструментов для ремонта</h1>
+        <div class="main-header__header-feedback header-feedback">
+          <span class="header-feedback__phone-number">+7 (812) 555-05-55</span>
+          <p class="header-feedback__adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+        </div>
+        <ul class="main-header__user-navigation">
+          <li class="main-header__user-navigation-item">Войти</li>
+          <li class="main-header__user-navigation-item">Регистрация</li>
+        </ul>
+      </div>
+      <div class="main-header__top-column">
+        <div class="main-header__logo-block">
+          <a class="main-header__logo-link">Техномарт</a>
+        </div>
+        <div class="main-header__search-block">
+          <input class="main-header__search-field" type="search" placeholder="Поиск">
+        </div>
+        <div class="main-header__bookmarks-block">
+          <p class="main-header__bookmarks-text">Закладки <span class="main-header__bookmarks-counter">0</span></p>
+        </div>
+        <div class="main-header__cart-block">
+          <p class="main-header__cart-text">Корзина <span class="main-header__cart-counter">0</span></p>
+        </div>
+        <div class="main-header__buy-block">
+          <a class="main-header__buy-button" href="#">Оформить заказ</a>
+        </div>
+      </div>
+      <div class="main-header__bottom-column">
+        <nav class="main-navigation">
+          <ul class="main-navigation__list">
+            <li class="main-navigation__item">
+              <a class="main-navigation__link" href="#">Главная</a>
+            </li>
+            <li class="main-navigation__item">
+              <a class="main-navigation__link" href="#">Компания</a>
+            </li>
+            <li class="main-navigation__item">
+              <a class="main-navigation__link" href="#">Каталог</a>
+            </li>
+            <li class="main-navigation__item">
+              <a class="main-navigation__link" href="#">Новости</a>
+            </li>
+            <li class="main-navigation__item">
+              <a class="main-navigation__link" href="#">Спецпредложение</a>
+            </li>
+            <li class="main-navigation__item">
+              <a class="main-navigation__link" href="#">Доставка</a>
+            </li>
+            <li class="main-navigation__item">
+              <a class="main-navigation__link" href="#">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
   </body>
 </html>
