Разметка блока с презентацией услуг

--- a/index.html
+++ b/index.html
@@ -62,5 +62,52 @@
         </nav>
       </div>
     </header>
+    <main>
+      <section class="service-presentation">
+        <h2 class="visually-hidden">Презентация услуг интернет-магазина</h2>
+        <section class="material-category service-presentation__material-category">
+          <h3 class="material-category__title">Материалы</h3>
+          <a class="material-category__link" href="#">На любой вкус</a>
+        </section>
+        <section class="tools-category service-presentation__tools-category">
+          <h3 class="tools-category__title">Инструмент</h3>
+          <a class="tools-category__link" href="#">На все случаи</a>
+        </section>
+        <section class="machinery-category service-presentation__machinery-category">
+          <h3 class="machinery-category__title">Техника</h3>
+          <a class="machinery-category__link" href="#">Для стройки</a>
+        </section>
+        <section class="product-slider service-presentation__product-slider">
+          <h3 class="visually-hidden">Лучшие категории товаров</h3>
+          <article class="product-slider__slide-item">
+            <div class="product-slider__perforators-slide">
+              <h4 class="product-slider__slide-title">Перфораторы</h4>
+              <p class="product-slider__slide-slogan">Настоящие мужские игрушки</p>
+            </div>
+            <div class="product-slider__drills-slide">
+                <h4 class="product-slider__slide-title">Дрели</h4>
+                <p class="product-slider__slide-slogan">Соседям на радость!</p>
+              </div>
+            <div class="product-slider__buttons-block">
+              <button class="product-slider__button-prev" type="button">Предыдущий слайд</button>
+              <button class="product-slider__button-next" type="button">Следующий слайд</button>
+            </div>
+            <a class="product-slider__slide-link" href="#">Открыть каталог</a>
+            <div class="product-slider__toggle-block">
+              <label class="product-slider__toggle-slide">Открыть слайд с перфораторами</label>
+              <label class="product-slider__toggle-slide">Открыть слайд с дрелями</label>
+            </div>
+          </article>
+        </section>
+        <section class="discounts-category service-presentation__discounts-category">
+          <h3 class="discounts-category__title">Скидки 50%</h3>
+          <a class="discounts-category__link" href="#">На 350 товаров</a>
+        </section>
+        <section class="delivery-category service-presentation__delivery-category">
+          <h3 class="delivery-category__title">Доставка</h3>
+          <a class="delivery-category__link" href="#">Бесплатно</a>
+        </section>
+      </section>
+    </main>
   </body>
 </html>
