Разметка блоков Популярных товаров и Производителей магазина

--- a/index.html
+++ b/index.html
@@ -108,6 +108,88 @@
           <a class="delivery-category__link" href="#">Бесплатно</a>
         </section>
       </section>
+      <section class="top-products">
+        <header class="top-products__head-block">
+          <h2 class="top-products__title">Популярные товары:</h2>
+          <a class="top-products__link" href="#">Все популярные товары</a>
+        </header>
+        <ul class="top-products__list">
+          <li class="top-products__item">
+            <article class="store-product top-products__store-product">
+              <h3 class="store-product__title">Перфоратор BOSCH BFG 9000</h3>
+              <img src="#" alt="Перфоратор BOSCH BFG 9000">
+              <p class="store-product__old-price">32500 Р.</p>
+              <p class="store-product__current-price">25500 Р.</p>
+            </article>
+            <article class="store-product top-products__store-product">
+              <h3 class="store-product__title">Перфоратор BOSCH BFG 3000</h3>
+              <img src="#" alt="Перфоратор BOSCH BFG 3000">
+              <p class="store-product__old-price">22500 Р.</p>
+              <p class="store-product__current-price">15500 Р.</p>
+            </article>
+            <article class="store-product top-products__store-product">
+              <h3 class="store-product__title">Перфоратор BOSCH BFG 6000</h3>
+              <img src="#" alt="Перфоратор BOSCH BFG 6000">
+              <p class="store-product__old-price">30500 Р.</p>
+              <p class="store-product__current-price">25500 Р.</p>
+            </article>
+            <article class="store-product top-products__store-product">
+              <h3 class="store-product__title">Перфоратор BOSCH BFG 2000</h3>
+              <img src="#" alt="Перфоратор BOSCH BFG 6000">
+              <p class="store-product__old-price"></p>
+              <p class="store-product__current-price">12500 Р.</p>
+            </article>
+          </li>
+        </ul>
+      </section>
+      <section class="top-makers">
+        <header class="top-makers__head-block">
+          <h2 class="top-makers__title">Популярные Производители:</h2>
+          <a class="top-makers__link" href="#">Все производители</a>
+          <ul class="top-makers__list">
+            <li class="top-makers__item">
+              <a class="top-makers__item-link">
+                <img src="#" alt="Производитель Bosch">
+              </a>
+            </li>
+            <li class="top-makers__item">
+              <a class="top-makers__item-link">
+                <img src="#" alt="Производитель Makita">
+              </a>
+            </li>
+            <li class="top-makers__item">
+              <a class="top-makers__item-link">
+                <img src="#" alt="Производитель DeWalt">
+              </a>
+            </li>
+            <li class="top-makers__item">
+              <a class="top-makers__item-link">
+                <img src="#" alt="Производитель Интерскол">
+              </a>
+            </li>
+            <li class="top-makers__item">
+              <a class="top-makers__item-link">
+                <img src="#" alt="Производитель Hitachi">
+              </a>
+            </li>
+            <li class="top-makers__item">
+              <a class="top-makers__item-link">
+                <img src="#" alt="Производитель LG">
+              </a>
+            </li>
+            <li class="top-makers__item">
+              <a class="top-makers__item-link">
+                <img src="#" alt="Производитель AEG Power Solutions">
+              </a>
+            </li>
+            <li class="top-makers__item">
+              <a class="top-makers__item-link">
+                <img src="#" alt="Производитель Metabo">
+              </a>
+            </li>
+          </ul>
+        </header>
+      </section>
     </main>
   </body>
 </html>
