Разметка блока сервисов

--- a/index.html
+++ b/index.html
@@ -190,6 +190,45 @@
           </ul>
         </header>
       </section>
+      <section class="services">
+        <header class="services__head-block">
+          <h2 class="services__head-title">Сервисы</h2>
+          <p class="services__head-description">Хороший интернет-магазин отличается от плохого не только ценами!
+            Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
+        </header>
+        <ul class="services__list">
+          <li class="services__item">Доставка</li>
+          <li class="services__item">Гарантия</li>
+          <li class="services__item">Кредит</li>
+        </ul>
+        <div class="services__list-description">
+          <div class="services__list-description--delivery">
+            <h3 class="services__item-title">Доставка</h3>
+            <p class="services__item-description">
+              Мы с удовольствием доставим ваш товар прямо
+              к вашему подъезду совершенно бесплатно!
+              Ведь мы неплохо заработаем,
+              поднимая его на ваш этаж!
+            </p>
+          </div>
+          <div class="services__list-description--guarantee">
+            <h3 class="services__item-title">Гарантия</h3>
+            <p class="services__item-description">
+              Если купленный у нас товар поломается или заискрит,
+              а также в случае пожара, спровоцированного его возгаранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый.
+              Дом уж восстановите как-нибудь сами.
+            </p>
+          </div>
+          <div class="services__list-description--credit">
+            <h3 class="services__item-title">Кредит</h3>
+            <p class="services__item-description">
+                Залезть в долговую яму стало проще!
+                Кредитные консультанты придут вам на помощь.
+            </p>
+            <a class="services__list-description--credit-link" href="#">Отправить заявку</a>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
