Разметка описательного раздела про компании

--- a/index.html
+++ b/index.html
@@ -229,6 +229,40 @@
           </div>
         </div>
       </section>
+      <article class="about-shop">
+        <h2 class="visually-hidden">Пару слов о нас</h2>
+        <section class="company-description about-shop__company-description">
+          <h3 class="company-description__title">Компания «Техномарт»</h3>
+          <p class="company-description__shop-work">
+            Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.
+          </p>
+          <p class="company-description__shop-work">
+              Мы можем доставить ваш товар в самые отдаленные точки России!
+              Техномарт работает со многими транспортными компаниями:
+          </p>
+          <ul class="company-description__partners-list">
+            <li class="company-description__partners-item">
+                Деловые линии
+            </li>
+            <li class="company-description__partners-item">
+                Автотрейдинг
+            </li>
+            <li class="company-description__partners-item">
+                ЖелДорЭкспедиция
+            </li>
+          </ul>
+          <a class="company-description__link" href="#">Подробнее о компании</a>
+        </section>
+        <section class="contacts about-shop__contacts">
+          <h3 class="contacts__title">Контакты</h3>
+          <p class="contacts__invitation-text">
+              Вы можете забрать товар сами,
+              заехав в наш офис:
+          </p>
+          <img class="contacts__map-location" src="#">
+          <button class="contacts__modal-open" type="button">Заблудились? Напишиту нам!</button>
+        </section>
+      </article>
     </main>
   </body>
 </html>
