--- a/index.html
+++ b/index.html
@@ -259,10 +259,102 @@
               Вы можете забрать товар сами,
               заехав в наш офис:
           </p>
-          <img class="contacts__map-location" src="#">
+          <img class="contacts__map-location" src="#" alt="Расположение нашего офиса на карте">
           <button class="contacts__modal-open" type="button">Заблудились? Напишиту нам!</button>
         </section>
       </article>
     </main>
+    <footer class="main-footer">
+      <div class="main-footer__top-column">
+        <div class="main-footer__logo-block">
+          <a class="main-footer__logo-link">Техномарт</a>
+        </div>
+        <nav class="footer-navigation main-footer__footer-navigation">
+          <ul class="footer-navigation__list">
+            <li class="footer-navigation__item">
+              <a class="footer-navigation__link" href="#">Компания</a>
+            </li>
+            <li class="footer-navigation__item">
+              <a class="footer-navigation__link" href="#">Новости</a>
+            </li>
+            <li class="footer-navigation__item">
+              <a class="footer-navigation__link" href="#">Каталог</a>
+            </li>
+            <li class="footer-navigation__item">
+              <a class="footer-navigation__link" href="#">Доставка</a>
+            </li>
+            <li class="footer-navigation__item">
+              <a class="footer-navigation__link" href="#">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+      <div class="main-footer__middle-column">
+        <p class="main-footer__office-location">
+            г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
+            +7 (812) 555-05-55
+        </p>
+        <ul class="main-footer__product-navigation">
+          <li class="main-footer__navigation-item">
+            <a class="main-footer__navigation-link" href="#">Материалы</a>
+          </li>
+          <li class="main-footer__navigation-item">
+            <a class="main-footer__navigation-link" href="#">Техника</a>
+          </li>
+          <li class="main-footer__navigation-item">
+            <a class="main-footer__navigation-link" href="#">Инструмент</a>
+          </li>
+          <li class="main-footer__navigation-item">
+            <a class="main-footer__navigation-link" href="#">Спецпредложения</a>
+          </li>
+        </ul>
+      </div>
+      <div class="main-footer__bottom-column">
+        <p class="main-footer__copyright">
+            © 2010–2019 Компания «Техномарт»
+            Все права защищены
+        </p>
+        <ul class="main-footer__social-list">
+          <li class="main-footer__social-item">
+            <a class="main-footer__social-link main-footer__social-link--vk" href="#">Наша группа в контакте</a>
+          </li>
+          <li class="main-footer__social-item">
+            <a class="main-footer__social-link main-footer__social-link--facebook" href="#">Наша группа в фейсбуке</a>
+          </li>
+          <li class="main-footer__social-item">
+            <a class="main-footer__social-link main-footer__social-link--instagram" href="#">Наша группа в инстаграме</a>
+          </li>
+        </ul>
+        <div class="main-footer__developers">
+          <p class="main-footer__developers-feedback">
+              Обратная связь:
+              <span class="main-footer__developer-name">mail@htmlacademy.ru</span>
+          </p>
+          <p class="main-footer__developers-cutaway">
+              Разработано —
+              <span class="main-footer__developer-name">htmlacademy.ru</span>
+          </p>
+        </div>
+      </div>
+    </footer>
+    <section class="modal modal--feedback">
+      <h2 class="visually-hidden">Окно отправки сообщения</h2>
+      <form class="modal--feedback__feedback-form">
+        <p class="modal--feedback__user-name">
+          <label for="name-field">Ваше имя:</label>
+          <input class="modal--feedback__name-field" type="text" id="name-field" placeholder="Имя Фамилия">
+        </p>
+        <p class="modal--feedback__user-mail">
+          <label for="mail-field">Ваш e-mail:</label>
+          <input class="modal--feedback__mail-field" type="email" id="mail-field" placeholder="email@example.com">
+        </p>
+        <p class="modal--feedback__user-message">
+          <label for="message-area">Текст письма:</label>
+          <textarea class="modal--feedback__message-area" id="message-area" placeholder="В свободной форме"></textarea>
+        </p>
+        <button class="modal--feedback__message-submit" type="submit">Отправить</button>
+        <button class="modal--feedback__button-close" type="button">Закрыть окно</button>
+      </form>
+    </section>
   </body>
 </html>
