Вариант итоговой разметки главной страницы

--- a/index.html
+++ b/index.html
@@ -353,8 +353,13 @@
           <textarea class="modal--feedback__message-area" id="message-area" placeholder="В свободной форме"></textarea>
         </p>
         <button class="modal--feedback__message-submit" type="submit">Отправить</button>
-        <button class="modal--feedback__button-close" type="button">Закрыть окно</button>
+        <button class="modal__button-close" type="button">Закрыть окно</button>
       </form>
+    </section>
+    <section class="modal modal--map-location">
+      <h2 class="visually-hidden">Как до нас добраться</h2>
+      <img class="modal--map-location__map-image" src="#" alt="Наше расположение на карте">
+      <button class="modal__button-close" type="button">Закрыть окно</button>
     </section>
   </body>
 </html>
