Вариант итоговой разметки формы каталога

--- a/catalog.html
+++ b/catalog.html
@@ -105,6 +105,41 @@
               </div>
             </div>
           </fieldset>
+          <fieldset class="setup-product__makers-block">
+            <legend class="setup-product__group-title">Производители:</legend>
+            <p class="setup-product__makers-item">
+              <label for="bosch">Bosch</label>
+              <input class="setup-product__makers-field" type="checkbox" id="bosch" checked>
+            </p>
+            <p class="setup-product__makers-item">
+              <label for="интерскол">Интерскол</label>
+              <input class="setup-product__makers-field" type="checkbox" id="интерскол">
+            </p>
+            <p class="setup-product__makers-item">
+              <label for="makita">Makita</label>
+              <input class="setup-product__makers-field" type="checkbox" id="makita" checked>
+            </p>
+            <p class="setup-product__makers-item">
+              <label for="makita">Dewalt</label>
+              <input class="setup-product__makers-field" type="checkbox" id="dewalt">
+            </p>
+            <p class="setup-product__makers-item">
+              <label for="hitachi">Hitachi</label>
+              <input class="setup-product__makers-field" type="checkbox" id="hitachi">
+            </p>
+          </fieldset>
+          <fieldset class="setup-product__charge-type">
+            <legend class="setup-product__group-title">Питание:</legend>
+            <p class="setup-product__charge-item">
+              <label for="storage-battery">Аккумуляторные</label>
+              <input class="setup-product__charge-field" type="radio" name="charge-type" value="storage-battery" id="storage-battery">
+            </p>
+            <p class="setup-product__charge-item">
+              <label for="network-charging">Сетевые</label>
+              <input class="setup-product__charge-field" type="radio" name="charge-type" value="network-charging" id="network-charging">
+            </p>
+          </fieldset>
+          <button class="setup-product__button-show">Показать</button>
         </form>
       </div>
     </main>
