Вариант итоговой разметки страницы каталога

--- a/catalog.html
+++ b/catalog.html
@@ -296,8 +296,34 @@
               </li>
             </ul>
           </section>
+          <footer class="sort-block__pagination">
+            <ul class="sort-block__pagination-list">
+              <li class="sort-block__pagination-item">
+                <a class="sort-block__pagination-link sort-block__pagination-link--current">1</a>
+              </li>
+              <li class="sort-block__pagination-item">
+                <a class="sort-block__pagination-link" href="#">2</a>
+              </li>
+              <li class="sort-block__pagination-item">
+                <a class="sort-block__pagination-link" href="#">3</a>
+              </li>
+              <li class="sort-block__pagination-item">
+                <a class="sort-block__pagination-link sort-block__pagination-link--next" href="#">Следующая</a>
+              </li>
+            </ul>
+          </footer>
         </section>
       </div>
+      <section class="page-description">
+        <h3 class="page-description__title">
+          Пара слов о перфораторах
+        </h3>
+        <p class="page-description__product-definition">
+            Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.
+            Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка.
+            В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.
+        </p>
+      </section>
     </main>
     <footer class="main-footer">
       <div class="main-footer__top-column">
