--- a/catalog.html
+++ b/catalog.html
@@ -15,7 +15,7 @@
         <ul class="main-header__user-navigation">
           <li class="main-header__user-navigation-item">
             <div class="main-header__user-profile">
-              <input class="main-header__user-avatar" type="file">Фотография пользователя</input>
+              <input class="main-header__user-avatar" type="file">
               <p class="main-header__user-name">Дима Кувалда</p>
               <button class="main-header__profile-exit" type="button">Выход из профиля</button>
               <ul class="main-header__user-profile-list">
@@ -164,9 +164,11 @@
             </div>
           </header>
           <section class="product-line sort-block__product-line">
+            <h3 class="visually-hidden">Линейка товаров данной категории</h3>
             <ul class="product-line__product-list">
               <li class="product-line__product-item">
                 <article class="item-card product-line__item-card">
+                  <h4 class="visually-hidden">Карточка товара</h4>
                   <img class="item-card__product-image" src="#" alt="Перфоратор BOSCH BFG 3000">
                   <p class="item-card__product-description">
                     Перфоратор BOSCH
@@ -182,6 +184,7 @@
               </li>
               <li class="product-line__product-item">
                 <article class="item-card product-line__item-card">
+                  <h4 class="visually-hidden">Карточка товара</h4>
                   <img class="item-card__product-image" src="#" alt="Перфоратор BOSCH BFG 6000">
                   <p class="item-card__product-description">
                     Перфоратор BOSCH
@@ -197,6 +200,7 @@
               </li>
               <li class="product-line__product-item">
                 <article class="item-card product-line__item-card">
+                  <h4 class="visually-hidden">Карточка товара</h4>
                   <img class="item-card__product-image" src="#" alt="Перфоратор BOSCH BFG 2000">
                   <p class="item-card__product-description">
                     Перфоратор BOSCH
@@ -210,6 +214,7 @@
               </li>
               <li class="product-line__product-item">
                 <article class="item-card product-line__item-card">
+                  <h4 class="visually-hidden">Карточка товара</h4>
                   <img class="item-card__product-image" src="#" alt="Перфоратор BOSCH BFG 3000">
                   <p class="item-card__product-description">
                     Перфоратор BOSCH
@@ -225,6 +230,7 @@
               </li>
               <li class="product-line__product-item">
                 <article class="item-card product-line__item-card">
+                  <h4 class="visually-hidden">Карточка товара</h4>
                   <img class="item-card__product-image" src="#" alt="Перфоратор BOSCH BFG 6000">
                   <p class="item-card__product-description">
                     Перфоратор BOSCH
@@ -240,6 +246,7 @@
               </li>
               <li class="product-line__product-item">
                 <article class="item-card product-line__item-card">
+                  <h4 class="visually-hidden">Карточка товара</h4>
                   <img class="item-card__product-image" src="#" alt="Перфоратор BOSCH BFG 2000">
                   <p class="item-card__product-description">
                     Перфоратор BOSCH
@@ -253,6 +260,7 @@
               </li>
               <li class="product-line__product-item">
                 <article class="item-card product-line__item-card">
+                  <h4 class="visually-hidden">Карточка товара</h4>
                   <img class="item-card__product-image" src="#" alt="Перфоратор BOSCH BFG 3000">
                   <p class="item-card__product-description">
                     Перфоратор BOSCH
@@ -268,6 +276,7 @@
               </li>
               <li class="product-line__product-item">
                 <article class="item-card product-line__item-card">
+                  <h4 class="visually-hidden">Карточка товара</h4>
                   <img class="item-card__product-image" src="#" alt="Перфоратор BOSCH BFG 6000">
                   <p class="item-card__product-description">
                     Перфоратор BOSCH
@@ -283,6 +292,7 @@
               </li>
               <li class="product-line__product-item">
                 <article class="item-card product-line__item-card">
+                  <h4 class="visually-hidden">Карточка товара</h4>
                   <img class="item-card__product-image" src="#" alt="Перфоратор BOSCH BFG 2000">
                   <p class="item-card__product-description">
                     Перфоратор BOSCH
@@ -297,6 +307,7 @@
             </ul>
           </section>
           <footer class="sort-block__pagination">
+            <h3 class="visually-hidden">Навигация по количеству данного товара</h3>
             <ul class="sort-block__pagination-list">
               <li class="sort-block__pagination-item">
                 <a class="sort-block__pagination-link sort-block__pagination-link--current">1</a>
@@ -398,5 +409,13 @@
         </div>
       </div>
     </footer>
+    <section class="modal modal--cart-add">
+      <button class="modal__button-close" type="button">Закрыть окно</button>
+      <h2 class="modal--cart-add__title">Товар добавлен в корзину!</h2>
+      <div class="modal--cart-add__select-actions">
+        <a class="modal--cart-add__buy-complete" href="#">Оформить заказ</a>
+        <button class="modal--cart-add__continue-select" type="button">Продолжить покупки</button>
+      </div>
+    </section>
   </body>
 </html>
