Базовая стилизация шапки

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Техномарт</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header class="main-header">
@@ -13,8 +14,12 @@
           <p class="header-feedback__adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
         </div>
         <ul class="main-header__user-navigation">
-          <li class="main-header__user-navigation-item">Войти</li>
-          <li class="main-header__user-navigation-item">Регистрация</li>
+          <li class="main-header__user-navigation-item">
+            <a class="main-header__user-navigation-link" href="#">Войти</a>
+          </li>
+          <li class="main-header__user-navigation-item">
+            <a class="main-header__user-navigation-link" href="#">Регистрация</a>
+          </li>
         </ul>
       </div>
       <div class="main-header__top-column">
