Итоговая базовая стилизация всех страниц проекта

--- a/catalog.html
+++ b/catalog.html
@@ -17,7 +17,7 @@
           <li class="main-header__user-navigation-item">
             <div class="main-header__user-profile">
               <input class="main-header__user-avatar" type="file">
-              <p class="main-header__user-name">Дима Кувалда</p>
+              <a class="main-header__user-name" href="#">Дима Кувалда</a>
               <button class="main-header__profile-exit" type="button">Выход из профиля</button>
               <ul class="main-header__user-profile-list">
                 <li class="main-header__user-profile-item">
@@ -52,7 +52,7 @@
         <nav class="main-navigation">
           <ul class="main-navigation__list">
             <li class="main-navigation__item">
-              <a class="main-navigation__link" href="#">Главная</a>
+              <a class="main-navigation__link" href="index.html">Главная</a>
             </li>
             <li class="main-navigation__item">
               <a class="main-navigation__link" href="#">Компания</a>
