--- a/index.html
+++ b/index.html
@@ -335,11 +335,11 @@
         <div class="main-footer__developers">
           <p class="main-footer__developers-feedback">
               Обратная связь:
-              <span class="main-footer__developer-name">mail@htmlacademy.ru</span>
+              <a class="main-footer__developer-name" href="#">mail@htmlacademy.ru</a>
           </p>
           <p class="main-footer__developers-cutaway">
               Разработано —
-              <span class="main-footer__developer-name">htmlacademy.ru</span>
+              <a class="main-footer__developer-name" href="#">htmlacademy.ru</a>
           </p>
         </div>
       </div>
