--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
       </div>
       <div class="main-header__bottom-column">
-        <div class="centering-block">
+        <div class="centering-block centering-block--header-bottom">
           <nav class="main-navigation">
             <ul class="main-navigation__list">
               <li class="main-navigation__item">
